<resources>
    <string name="app_name">Traveze</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="Signup">Sign up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="no_account_yet">No account yet? Create one</string>
    <string name="hello_world">Hello World!</string>
    <string name="title_activity_my_account">MyAccountActivity</string>
    <string name="my_account">My Account</string>
    <string name="admin">Admin</string>
    <string name="manager">Manager</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="my_trips">My Trips</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="buy_premium">Buy Premium</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="name">Name</string>
    <string name="add_hotel">Add Hotel</string>
    <string name="view_hotels">View Hotels</string>
    <string name="number_of_rooms">Number of Rooms</string>
    <string name="state">State</string>
    <string name="place">Place</string>
    <string name="title_activity_hotel_info">hotel_info</string>
    <string name="Hotelname">Hotel name</string>
    <string name="Hotelloca">Hotel location</string>
    <string name="Hoteldesc">Hotel description</string>
    <string name="NoOfrooms">Room availability</string>
    <string name="EditHotel">Edit</string>
    <string name="ViewRooms">View rooms</string>
    <string name="ManagerView">Manager View</string>
    <string name="Save"> Save </string>
    <string name="Discard">Discard</string>
    <string name="roomNo">Room</string>
    <string name="roomType">Room type</string>
    <string name="Status">Status</string>
    <string name="Back">Back</string>
    <string name="Startdest">Start destination</string>
    <string name="Enddest">End Destination</string>
    <string name="Startdate">Start Date</string>
    <string name="Enddate">End Date</string>
    <string name="NoOfDays">No of Days</string>
    <string name="Budget">Budget</string>
    <string name="Ratings">Ratings</string>
    <string name="Cost">Hotel cost</string>
    <string name="Home">Home</string>
    <string name="modify">Modify date</string>
    <string name="Searchhotel">Search hotel</string>
    <string name="Searchtransport">Search travels</string>
    <string name="Hotelsavail">Hotels available</string>
    <string name="title_activity_managerview">managerview</string>
    <string name="title_activity_manager_edit">manager_edit</string>
    <string name="title_activity_view_rooms">view_rooms</string>
</resources>
