<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_my_account"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/my_account" />
        <item
            android:id="@+id/nav_admin"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/admin" />
        <item
            android:id="@+id/nav_manager"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/manager" />
        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/ic_menu_login"
            android:title="@string/login"
            android:visible="false" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_menu_logout"
            android:title="@string/logout"
            android:visible="false" />
    </group>

</menu>
