<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/action_my_account"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/my_account"
            app:showAsAction="never"/>
        <item
            android:id="@+id/action_admin"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/admin"
            app:showAsAction="never"/>
        <item
            android:id="@+id/action_manager"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/manager"
            app:showAsAction="never"/>
        <item
            android:id="@+id/action_login"
            android:icon="@drawable/ic_menu_login"
            android:title="@string/login"
            android:visible="false"
            app:showAsAction="never"/>

        <item
            android:id="@+id/action_logout"
            android:icon="@drawable/ic_menu_logout"
            android:title="@string/logout"
            android:visible="true"
            app:showAsAction="never"/>
    </group>
</menu>
