<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:text="@string/ManagerView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.se.travezeandroid.managerview"
    tools:showIn="@layout/activity_managerview">

    <TextView
        android:id="@+id/hotel_name"
        android:layout_width="208dp"
        android:layout_height="34dp"
        android:text="@string/Hotelname"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/hotel_loc"
        android:layout_marginTop="69dp"
        android:layout_marginBottom="74dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="88dp"
        app:layout_constraintVertical_bias="0.0"
        android:layout_marginStart="88dp"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/hotel_loc"
        android:layout_width="208dp"
        android:layout_height="37dp"
        android:text="@string/Hotelloca"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="120dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/hotel_desc"
        android:layout_width="210dp"
        android:layout_height="0dp"
        android:text="@string/Hoteldesc"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/room_avail"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="27dp"
        app:layout_constraintTop_toBottomOf="@+id/hotel_loc"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="25dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/room_avail"
        android:layout_width="210dp"
        android:layout_height="33dp"
        android:text="@string/NoOfrooms"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="138dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/edit_hotel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/EditHotel"
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="53dp"
        android:layout_marginTop="31dp"
        app:layout_constraintTop_toBottomOf="@+id/room_avail"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/View_rooms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ViewRooms"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/edit_hotel"
        android:layout_marginEnd="42dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edit_hotel" />

</android.support.constraint.ConstraintLayout>
