<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.se.travezeandroid.manager_edit"
    tools:showIn="@layout/activity_manager_edit">

    <EditText
        android:id="@+id/hotel_name"
        android:layout_width="248dp"
        android:layout_height="33dp"
        android:layout_marginLeft="62dp"
        android:layout_marginStart="62dp"
        android:layout_marginTop="47dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/Hotelname"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor,RtlHardcoded"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1" />

    <EditText
        android:id="@+id/hotel_loc"
        android:layout_width="250dp"
        android:layout_height="33dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/Hotelloca"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="39dp"
        app:layout_constraintTop_toBottomOf="@+id/hotel_name"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/hotel_name"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/hotel_desc"
        android:layout_width="268dp"
        android:layout_height="103dp"
        android:layout_marginTop="60dp"
        android:ems="10"
        android:inputType="textMultiLine"
        android:text="@string/Hoteldesc"
        app:layout_constraintLeft_toLeftOf="@+id/hotel_loc"
        app:layout_constraintRight_toRightOf="@+id/hotel_loc"
        app:layout_constraintTop_toBottomOf="@+id/hotel_loc"
        tools:ignore="LabelFor"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"
        app:layout_constraintHorizontal_bias="0.245" />

    <EditText
        android:id="@+id/hotel_rooms"
        android:layout_width="0dp"
        android:layout_height="41dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/NoOfrooms"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="56dp"
        android:layout_marginEnd="56dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/hotel_desc"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/button_discard"
        android:layout_width="106dp"
        android:layout_height="0dp"
        android:layout_marginEnd="16dp"
        android:text="@string/Discard"
        app:layout_constraintRight_toRightOf="@+id/hotel_rooms"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/save_button"
        app:layout_constraintTop_toTopOf="@+id/save_button" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="96dp"
        android:layout_height="50dp"
        android:text="@string/Save"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="58dp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="42dp"
        app:layout_constraintLeft_toLeftOf="parent" />
</android.support.constraint.ConstraintLayout>
