<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.se.travezeandroid.hotel_info"
    tools:showIn="@layout/activity_hotel_info">

    <TextView
        android:id="@+id/hotel_name"
        android:layout_width="0dp"
        android:layout_height="39dp"
        android:text="@string/Hotelname"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/hotel_desc"
        android:layout_marginStart="54dp"
        android:layout_marginEnd="54dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="12dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/hotel_desc"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:text="@string/Hoteldesc"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/room_type"
        android:layout_marginTop="67dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/hotel_name"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="189dp"
        android:layout_height="117dp"
        app:srcCompat="@android:color/background_dark"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/num_rooms"
        android:layout_marginTop="99dp"
        app:layout_constraintTop_toBottomOf="@+id/hotel_name"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="100dp"
        app:layout_constraintLeft_toLeftOf="@+id/hotel_desc"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/room_type"
        android:layout_width="264dp"
        android:layout_height="33dp"
        android:text="@string/roomType"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/num_rooms"
        android:layout_marginTop="17dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="17dp"
        app:layout_constraintLeft_toLeftOf="@+id/num_rooms" />

    <TextView
        android:id="@+id/num_rooms"
        android:layout_width="0dp"
        android:layout_height="33dp"
        android:text="@string/NoOfrooms"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/home"
        android:layout_marginStart="52dp"
        android:layout_marginEnd="52dp"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="7dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Save"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="7dp"
        app:layout_constraintTop_toBottomOf="@+id/num_rooms"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/num_rooms" />

    <Button
        android:id="@+id/book_trav"
        android:layout_width="92dp"
        android:layout_height="48dp"
        android:text="@string/Searchtransport"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="105dp"
        android:layout_marginEnd="101dp"
        app:layout_constraintRight_toRightOf="@+id/home"
        android:layout_marginTop="7dp"
        app:layout_constraintTop_toBottomOf="@+id/num_rooms"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/num_rooms" />

    <Button
        android:id="@+id/home"
        android:layout_width="88dp"
        android:layout_height="48dp"
        android:text="@string/Home"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="29dp" />
</android.support.constraint.ConstraintLayout>
